[project]
name = "body-movement"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "FloatingInt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "mediapipe>=0.10.14",
    "opencv-python>=4.9.0.80",
    "websockets>=12.0",
    "linflex @ file:///C:/Users/knuto/Documents/VisualStudioCode/Python/Libraries/linflex",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"main" = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
    "annotations.py",
    "networking.py",
    "detection.py"
]
